Added heroku config
Signed-off-by: himangshu <himangshu@gozoomo.com>

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,8 @@
 #Postgres properties
 db.driver=org.postgresql.Driver
-# db.url=jdbc:postgresql://localhost:5432/gozoomo
-db.url=jdbc:postgresql://someurl:5432/gozoomo
-db.username=postgres
-# db.password=postgres
-db.password=somepass
+db.url=jdbc:postgresql://ec2-54-197-247-170.compute-1.amazonaws.com::5432/dfgarqlfjsm7g6
+db.username=vgjsifjmrwpqqz
+db.password=Sg3R0d7at0M5DHjmR9GGTLBrda
 
 #Spring Data JPA properties
 hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialect
