Procfile and config changes
Signed-off-by: himangshu <himangshu@gozoomo.com>

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #Postgres properties
 db.driver=org.postgresql.Driver
-db.url=jdbc:postgresql://ec2-54-197-247-170.compute-1.amazonaws.com::5432/dfgarqlfjsm7g6
+db.url=jdbc:postgresql://ec2-54-197-247-170.compute-1.amazonaws.com:5432/dfgarqlfjsm7g6
 db.username=vgjsifjmrwpqqz
 db.password=Sg3R0d7at0M5DHjmR9GGTLBrda
 
