--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 #Postgres properties
 db.driver=org.postgresql.Driver
-db.url=jdbc:postgresql://ec2-54-197-247-170.compute-1.amazonaws.com:5432/dfgarqlfjsm7g6
-db.username=vgjsifjmrwpqqz
-db.password=Sg3R0d7at0M5DHjmR9GGTLBrda
+db.url=jdbc:postgresql://ec2-107-20-136-89.compute-1.amazonaws.com:5432/d3d6v3548akq5k
+db.username=mepyuumhaohqnu
+db.password=nbYww0hDRf9LnuHUwFF4E05dpH
 
 #Spring Data JPA properties
 hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialect
