--- a/src/main/html-source/package.json
+++ b/src/main/html-source/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.0",
   "devDependencies": {
     "grunt": "~0.4",
-    "grunt-angular-templates": "~0.5",
+      "bower": "~1.3.12",
+      "grunt-cli": "~0.1.9",
+      "grunt-angular-templates": "~0.5",
     "grunt-browser-output": "0.1.0",
     "grunt-contrib-clean": "~0.5",
     "grunt-contrib-concat": "~0.3",
