fixing properties security for db
Signed-off-by: himangshu <himangshu@gozoomo.com>

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #Postgres properties
 db.driver=org.postgresql.Driver
-db.url=jdbc:postgresql://ec2-107-20-136-89.compute-1.amazonaws.com:5432/d3d6v3548akq5k
+db.url=${JDBC_DATABASE_URL}
 db.username=mepyuumhaohqnu
 db.password=nbYww0hDRf9LnuHUwFF4E05dpH
 
