--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,7 +1,6 @@
 #Postgres properties
 db.driver=org.postgresql.Driver
-# db.url=jdbc:postgresql://localhost:5432/gozoomo
-db.url=jdbc:postgresql://localhost:5432/sample_rest
+db.url=jdbc:postgresql://localhost:5432/sample_rest_test
 db.username=postgres
 # db.password=postgres
 db.password=postgres
@@ -10,5 +9,5 @@ db.password=postgres
 hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialect
 hibernate.format_sql=true
 hibernate.show_sql=true
-hibernate.hbm2ddl.auto=create
+hibernate.hbm2ddl.auto=create-drop
 hibernate.ejb.naming_strategy=org.hibernate.cfg.ImprovedNamingStrategy
